# docs

./: .gitignore
config/: security-policy.json
docker/: docker-compose.yml
master-agent/: Dockerfile  entrypoint.sh  main.py  requirements.txt
master-agent/agents/: code_agent.py  math_agent.py  research_agent.py
master-agent/core/: acl_engine.py  alert_manager.py  auth_middleware.py  rate_limiter.py  resource_manager.py  shutdown.py  trash_manager.py
master-agent/master/: sovereign.py
mcp-gateway/: Dockerfile  main.py
mcp-gateway/gateway/: auth_handler.py  server.py
scripts/: build.sh  deploy.sh  generate_user_config.py  monitor.sh  security-cli.py
sharded-vault/: Cargo.toml  Dockerfile
sharded-vault/src/: main.rs  shard.rs
warp-core/: Cargo.toml  Dockerfile
warp-core/src/: agent_listener.rs  main.rs
web-ui/: Dockerfile  package-lock.json  package.json
web-ui/public/: index.html
web-ui/src/: App.tsx
web-ui/src/providers/: AuthProvider.tsx  WebSocketProvider.tsx
